--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,64 +1,2 @@
-<div class="container">
-  <div class="title">
-    <h1>{{ title }}</h1>
-  </div>
-
-  <add-wish-form (addWish)="items.push($event)"></add-wish-form>
-
-  <div class="row mt-3">
-    <wish-filter [(filter)]="filter"></wish-filter>
-    <!-- <div class="col-sm-2">
-      <label for="filter p-3" class="form-label">Filter</label>
-      <select class="form-select" id="filter" [(ngModel)]="listFilter">
-        <option value="0">All</option>
-        <option value="1">Unfulfilled</option>
-        <option value="2">Fulfilled</option>
-      </select>
-    </div> -->
-  </div>
-
-  <div class="row mt-3">
-    <div class="col-sm-4">
-      <!-- <wish-list [wishes]="visibleItems"></wish-list> -->
-      <wish-list [wishes]="items.filter(filter)"></wish-list>
-    </div>
-  </div>
-
-  <!-- <div *ngIf="items.length === 0; then noItems else showItems"></div>
-  <ng-template #noItems>
-    <h2>Wish List is Empty</h2>
-    <p>Add items to your wish list.</p>
-  </ng-template>
-
-  <ng-template #showItems>
-    <ul class="wish-list">
-      <li *ngFor="let item of items">
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" />
-            {{ item.wishText }}
-          </label>
-        </div>
-      </li>
-    </ul>
-  </ng-template> -->
-
-  <!-- <div *ngIf="items.length === 0" class="empty-wish-list">
-    <h2>Wish List is Empty</h2>
-    <p>Add items to your wish list.</p>
-  </div> -->
-
-
-  <!-- <ul *ngIf="items.length > 0" class="wish-list">
-    <li *ngFor="let item of items">
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" />
-          {{ item.wishText }}
-        </label>
-      </div>
-    </li>
-  </ul> -->
-</div>
-
+<app-wish></app-wish>
 <router-outlet />
