--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,18 +4,42 @@
   <form>
     <div class="mb-3">
       <label for="name" class="form-label">Name</label>
-      <input type="text" id="name" class="form-control" name="name" formControlName="name" ngModel required />
+      <input type="text" id="name" class="form-control" name="name" formControlName="name" />
+
+      <div *ngIf="contactForm.get('name')?.invalid && contactForm.get('name')?.touched" class="text-danger">
+        <small class="text-danger" *ngIf="contactForm.get('name')?.hasError('required')">This field is
+          required</small>
+        <small class="text-danger" *ngIf="contactForm.get('name')?.hasError('minlength')">Please enter a name over
+          3 characters
+          long.</small>
+
+      </div>
     </div>
     <div class="mb-3">
       <label for="email" class="form-label">Email</label>
-      <input type="email" id="email" class="form-control" name="email" formControlName="email" ngModel required />
+      <input type="email" id="email" class="form-control" name="email" formControlName="email" />
+      <div *ngIf="contactForm.get('email')?.invalid && contactForm.get('email')?.touched" class="text-danger">
+        <small class="text-danger" *ngIf="contactForm.get('email')?.hasError('required')">This field is required</small>
+        <small class="text-danger" *ngIf="contactForm.get('email')?.hasError('email')">Please enter a valid email
+          address.</small>
+
+      </div>
     </div>
     <div class="mb-3">
       <label for="message" class="form-label">Message</label>
-      <textarea id="message" class="form-control" name="message" rows="4" formControlName="message" ngModel
-        required></textarea>
+      <textarea id="message" class="form-control" name="message" rows="4" formControlName="message"></textarea>
+
+      <div *ngIf="contactForm.get('message')?.invalid && contactForm.get('message')?.touched" class="text-danger">
+        <small class="text-danger" *ngIf="contactForm.get('message')?.hasError('required')">This field is
+          required</small>
+        <small class="text-danger" *ngIf="contactForm.get('message')?.hasError('minlength')">Please enter a message over
+          10 characters
+          long.</small>
+
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary" (click)="$event.preventDefault(); onSubmit()">
+    <button type="submit" class="btn btn-primary" (click)="$event.preventDefault(); onSubmit()"
+      [disabled]="!contactForm.valid">
       Submit
     </button>
   </form>
